# chargenet

./: LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: setup-and-test.yml
data/AMY_BACSU/combinatorials/: dipoles.joblib
data/AMY_BACSU/singles/: dipoles.joblib
data/proteingym/: final_selection.csv  reference_info_with_structures.csv
data/proteingym/A0A1I9GEU1_NEIME_Kennouche_2019/: data.csv  reference.fasta
data/proteingym/A0A247D711_LISMN_Stadelmann_2021/: data.csv  dipoles.joblib  reference.fasta
data/proteingym/CALM1_HUMAN_Weile_2017/: data.csv  reference.fasta
data/proteingym/CCDB_ECOLI_Adkar_2012/: data.csv  dipoles.joblib  reference.fasta
data/proteingym/CCDB_ECOLI_Tripathi_2016/: data.csv  dipoles.joblib
data/proteingym/DYR_ECOLI_Nguyen_2023/: data.csv  dipoles.joblib
data/proteingym/DYR_ECOLI_Thompson_2019/: data.csv  dipoles.joblib  reference.fasta
data/proteingym/GRB2_HUMAN_Faure_2021/: data.csv  dipoles.joblib  reference.fasta
data/proteingym/HECD1_HUMAN_Tsuboyama_2023_3DKM/: data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv  data_8.csv  data_9.csv  msa.a2m  (+1 more)
img/pipeline/: 1N9U_mutant.pqr
results/position_extrapolation/: results.csv
results/synthetic_charge_prediction/: results.csv
scripts/: install_apbs.sh  install_pymol.sh
src/chargenet/: constants.py
tests/: conftest.py
tests/data/: 1AGY.pqr  1N9U.pqr  2PM1.pqr  8GL4.pqr
tests/models/: test_models.py
tests/pipelines/: test_apbspipelines.py
tests/processors/: test_pqr_solver.py  test_structure_mutator.py
(+79 files in other folders)
